methods.picture.MethodsPictureLarge.scala.error
Compilation error:
MethodsPictureLarge:3: error: ';' expected but 'for' found.
*/  for(i<- 1 to 3){
    ^